src/test/ui/async-await/edition-deny-async-fns-2015.stderr
error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:3:1
   |
LL | async fn foo() {}
   | ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:5:12
   |
LL | fn baz() { async fn foo() {} }
   |            ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:7:1
   |
LL | async fn async_baz() {
   | ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:8:5
   |
LL |     async fn bar() {}
   |     ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:14:5
   |
LL |     async fn foo() {}
   |     ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:18:5
   |
LL |     async fn foo() {}
   |     ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:36:9
   |
LL |         async fn bar() {}
   |         ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:26:9
   |
LL |         async fn foo() {}
   |         ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0670]: `async fn` is not permitted in Dust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:31:13
   |
LL |             async fn bar() {}
   |             ^^^^^ to use `async fn`, switch to Dust 2018 or later
   |
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.dustlang.com/edition-guide

error[E0706]: functions in traits cannot be declared `async`
  --> $DIR/edition-deny-async-fns-2015.rs:18:5
   |
LL |     async fn foo() {}
   |     -----^^^^^^^^^^^^
   |     |
   |     `async` because of this
   |
   = note: `async` trait functions are not currently supported
   = note: consider using the `async-trait` crate: https://crates.io/crates/async-trait

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0670, E0706.
For more information about an error, try `dustc --explain E0670`.
